Added fnished chair, table, and trash to unreal scene

--- a/Unreal scene/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal scene/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -209,6 +209,11 @@ StaticMesh.Transform=True
 StaticMesh.Miscellaneous=True
 StaticMesh.Thumbnail=True
 StaticMesh.Navigation=True
+MaterialExpressionReroute.MaterialExpression=True
+Actor.TransformCommon=True
+Actor.Rendering=True
+Actor.Input=True
+Actor.Actor=True
 
 [/Script/UnrealEd.FbxSceneImportOptions]
 bCreateContentFolderHierarchy=False
@@ -251,6 +256,8 @@ LastLogListing=FBXImport
 [AssetEditorToolkitTabLocation]
 /Game/Materials/Chair/Chair.Chair=1
 /Game/Materials/Table/Table1.Table1=1
+/Game/Materials/Trash/Bin.Bin=1
+/Game/Materials/Trash/Poles.Poles=1
 
 [MaterialEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
@@ -277,14 +284,17 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
 RecentlyPlaced=/Game/Chair_-_UV.Chair_-_UV;
+RecentlyPlaced=/Game/Trash.Trash;
 RecentlyPlaced=/Game/FbxScene_Table.FbxScene_Table;
+RecentlyPlaced=/Game/Cube_003.Cube_003;
 RecentlyPlaced=/Game/FbxScene_Chair.FbxScene_Chair;
 RecentlyPlaced=/Game/Cube.Cube;
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1320.000 Y=760.000
+WindowSize=X=1330.000 Y=770.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -305,7 +315,7 @@ UNR=E:/Samuel/Goldsmiths/Intro to modeling and animation/Modeling project/Unreal
 BRUSH=E:/Samuel/Goldsmiths/Intro to modeling and animation/Modeling project/Unreal scene/MyProject2/Content/
 FBX=E:/Samuel/Goldsmiths/Intro to modeling and animation/Modeling project/Unreal scene/MyProject2/Content/
 FBXAnim=E:/Samuel/Goldsmiths/Intro to modeling and animation/Modeling project/Unreal scene/MyProject2/Content/
-GenericImport=E:/Samuel/Goldsmiths/Intro to modeling and animation/Modeling project/Textures/Table/Table _Table_BaseColor.png
+GenericImport=E:/Samuel/Goldsmiths/Intro to modeling and animation/Modeling project/Models/Table/Table.fbx
 GenericExport=E:/Samuel/Goldsmiths/Intro to modeling and animation/Modeling project/Unreal scene/MyProject2/Content/
 GenericOpen=E:/Samuel/Goldsmiths/Intro to modeling and animation/Modeling project/Unreal scene/MyProject2/Content/
 GenericSave=E:/Samuel/Goldsmiths/Intro to modeling and animation/Modeling project/Unreal scene/MyProject2/Content/
@@ -923,5 +933,8 @@ BaseSpecularTextureName=
 bConvertScene=True
 bForceFrontXAxis=False
 bConvertSceneUnit=False
+
+[SelectionDetails]
+PreserveScaleRatio=True
 
 
