Fixed the restaurant

--- a/Unreal scene/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal scene/MyProject2/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -358,7 +358,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Textures/Restaurant
 ContentBrowserTab1.CollectionsExpanded=True
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
@@ -384,7 +384,7 @@ RecentlyPlaced=/Game/Cube.Cube;
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
-WindowSize=X=1400.000 Y=840.000
+WindowSize=X=1410.000 Y=850.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -405,7 +405,7 @@ UNR=E:/Samuel/Goldsmiths/Intro to modeling and animation/Modeling project/Unreal
 BRUSH=E:/Samuel/Goldsmiths/Intro to modeling and animation/Modeling project/Unreal scene/MyProject2/Content/
 FBX=E:/Samuel/Goldsmiths/Intro to modeling and animation/Modeling project/Unreal scene/MyProject2/Content/
 FBXAnim=E:/Samuel/Goldsmiths/Intro to modeling and animation/Modeling project/Unreal scene/MyProject2/Content/
-GenericImport=E:/Samuel/Goldsmiths/Intro to modeling and animation/Modeling project/Textures/Menu/Menu_Board_BaseColor.png
+GenericImport=E:/Samuel/Goldsmiths/Intro to modeling and animation/Modeling project/Textures/Restaurant/Restaurant_Sign_Normal.png
 GenericExport=E:/Samuel/Goldsmiths/Intro to modeling and animation/Modeling project/Unreal scene/MyProject2/Content/
 GenericOpen=E:/Samuel/Goldsmiths/Intro to modeling and animation/Modeling project/Unreal scene/MyProject2/Content/
 GenericSave=E:/Samuel/Goldsmiths/Intro to modeling and animation/Modeling project/Unreal scene/MyProject2/Content/
